--- a/lib/Makefile-common
+++ b/lib/Makefile-common
@@ -3,9 +3,10 @@ DEFS =
 LIBS =
 F_CPU=16000000L
 CC = avr-gcc
+TOP := $(dir $(lastword $(MAKEFILE_LIST)))
 # Override is only needed by avr-lib build system.
-override CFLAGS = -g -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS) -DF_CPU=$(F_CPU)
-override LDFLAGS = -Wl,-Map,$(PRG).map
+override CFLAGS = -g -Wall $(OPTIMIZE) -mmcu=$(MCU_TARGET) $(DEFS) -DF_CPU=$(F_CPU) -I$(TOP)/inc -ffunction-sections
+override LDFLAGS = -Wl,-Map,$(PRG).map -Wl,--gc-sections
 OBJCOPY = avr-objcopy
 OBJDUMP = avr-objdump
 all: $(PRG).elf lst text eeprom
@@ -15,7 +16,7 @@ $(PRG).elf: $(OBJ)
 $(PRG).o: $(PRG).c
 clean:
 	rm -rf *.o $(PRG).elf *.eps *.png *.pdf *.bak
-	rm -rf *.lst *.map $(EXTRA_CLEAN_FILES)
+	rm -rf *.lst *.map $(EXTRA_CLEAN_FILES) $(OBJ)
 lst: $(PRG).lst
 %.lst: %.elf
 	$(OBJDUMP) -h -S $< > $@
@@ -44,3 +45,6 @@ esrec: $(PRG)_eeprom.srec
 %_eeprom.bin: %.elf
 	$(OBJCOPY) -j .eeprom --change-section-lma .eeprom=0 -O binary $< $@ \
 	|| { echo empty $@ not generated; exit 0; }
+
+upload-%: %.hex
+	avrdude -c arduino -p m168 -P /dev/ttyUSB0 -b 19200 -U "flash:w:$<"
