--- a/lib/Makefile.common
+++ b/lib/Makefile.common
@@ -20,6 +20,7 @@ clean:
 	$(OBJCOPY) -j .text -j .data -O ihex $< $@
 
 upload-%: %.hex
+	screen -S arduino -X kill || :
 	avrdude -c arduino -p m168 -P /dev/ttyUSB0 -b 19200 -U "flash:w:$<"
 
 .PRECIOUS: %.o %.elf
