Move lights to lib/

--- a/leds/Makefile
+++ b/leds/Makefile
@@ -1,5 +1,5 @@
 all: leds.hex
-leds.elf: lights.o automaton.o
+leds.elf: ../lib/lights.o automaton.o
 leds.o: CFLAGS+=-std=c11
 
 include ../lib/Makefile.common
